chore (header.component.html): hide reset link

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,12 +24,12 @@
                   general--font-color">
             settings</a>
 
-        <a href=""
-           class="header__item
-                  header__item--on-hover
-                  header--desktop-font-size-small
-                  general--font-color">
-            reset</a>
+        <!--        <a href=""-->
+        <!--           class="header__item-->
+        <!--                  header__item&#45;&#45;on-hover-->
+        <!--                  header&#45;&#45;desktop-font-size-small-->
+        <!--                  general&#45;&#45;font-color">-->
+        <!--            reset</a>-->
 
         <a routerLink="about"
            class="header__item
