--- a/src/app/components/widget-area/widget/chart-widget/chart/chart.component.sass
+++ b/src/app/components/widget-area/widget/chart-widget/chart/chart.component.sass
@@ -1,4 +1,4 @@
-@import "../../../../../styles/colors_variables"
+@import "../../../../../../styles/colors_variables"
 
 .layout-chart-widget
   display: grid
