--- a/src/app/components/widget-area/widget/general-components/search/search.component.sass
+++ b/src/app/components/widget-area/widget/general-components/search/search.component.sass
@@ -1,4 +1,4 @@
-@import "../../../../../styles/colors_variables"
+@import "../../../../../../styles/colors_variables"
 
 .search-component
   display: flex
