--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,15 +1,11 @@
 <form class="">
-    <div>
-        <ng-container *ngFor="let msg of userMessages">
-            <div>{{msg}}</div>
-        </ng-container>
-    </div>
 
     <div class="">
         <label for="AVantageKey" class="">Your Alpha Vantage API key:</label>
         <input type="text" class="" id="AVantageKey"
-               (focusout)="verifyAlphaVantageKey()" required
-               [(ngModel)]="alphaVantageApiKey.keyValue" name="AVantageKey">
+               (focusout)="verifyAlphaVantageKey().subscribe()" required
+               [(ngModel)]="alphaVantageApiKey.keyValue" name="AVantageKey"
+               [disabled]="saving">
         <div>
             <div *ngIf="alphaVantageApiKey.isValid">Correct!</div>
             <div *ngIf="!alphaVantageApiKey.isValid">Key isn't correct!</div>
@@ -19,8 +15,9 @@
     <div class="">
         <label for="iexKey" class="">Your iex cloud API key:</label>
         <input type="text" class="" id="iexKey"
-               (focusout)="verifyIexApiKey()" required
-               [(ngModel)]="iexApiKey.keyValue" name="iexKey">
+               (focusout)="verifyIexApiKey().subscribe()" required
+               [(ngModel)]="iexApiKey.keyValue" name="iexKey"
+               [disabled]="saving">
         <div>
             <div *ngIf="iexApiKey.isValid">Correct!</div>
             <div *ngIf="!iexApiKey.isValid">Key isn't correct!</div>
@@ -30,8 +27,9 @@
     <div class="">
         <label for="iexSandboxKey" class="">Your sandbox iex cloud API key:</label>
         <input type="text" class="" id="iexSandboxKey"
-               (focusout)="verifyIexSandboxApiKey()" required
-               [(ngModel)]="iexSandboxApiKey.keyValue" name="iexSandboxKey">
+               (focusout)="verifyIexSandboxApiKey().subscribe()" required
+               [(ngModel)]="iexSandboxApiKey.keyValue" name="iexSandboxKey"
+               [disabled]="saving">
         <div>
             <div *ngIf="iexSandboxApiKey.isValid">Correct!</div>
             <div *ngIf="!iexSandboxApiKey.isValid">Key isn't correct!</div>
@@ -39,10 +37,15 @@
     </div>
 
     <button type="submit"
-            [disabled]="!(iexSandboxApiKey.isValid
-        && iexApiKey.isValid
-        && alphaVantageApiKey.isValid)"
-            (click)="saveKeys()">
+            (click)="saveKeys()"
+            [disabled]="saving">
         Save API keys to Local storage
     </button>
+    <div *ngIf="messageForUser">
+        {{messageForUser}}
+    </div>
 </form>
+
+<!--            [disabled]="!(iexSandboxApiKey.isValid-->
+<!--        && iexApiKey.isValid-->
+<!--        && alphaVantageApiKey.isValid)"-->
