--- a/src/app/components/widget-area/widget/chart-widget/chart/chart.component.html
+++ b/src/app/components/widget-area/widget/chart-widget/chart/chart.component.html
@@ -1,30 +1,28 @@
-<p>CHART!</p>
 <div class="layout-chart-widget">
 
     <div class="layout-chart-widget__company-index
                     layout-chart-widget__company-index--left-corner">
         <div class="layout-chart-widget__company-name
                         layout-chart-widget__company-name--desktop-font-size
-                        general--bold">IBM
+                        general--bold">{{currentCompany.symbol}}
         </div>
         <div class="css-icon-up-arrow
                             layout-chart-widget__company-today-conversion-arrow"></div>
-        <div class="layout-chart-widget__company-today-conversion-cents">+0.5%</div>
+        <div class="layout-chart-widget__company-today-conversion-cents">{{difference}}</div>
     </div>
 
     <div class="layout-chart-widget__company-index
                     layout-chart-widget__company-index--right-corner">
         <time class="layout-chart-widget__date-last-value
                          layout-chart-widget__date-last-value--desktop-font-size"
-              datetime="2020-10-13 00:00">13.10.2020
+              datetime="2020-10-13 00:00">{{today}}
         </time>
     </div>
 
     <div class="layout-chart-widget__chart
                     layout-chart-widget__chart--center">
-        <!--        <img src="http://placekitten.com/g/800/580" alt="place for chart">-->
-        <div class="chart-area"></div>
         <div>{{currentCompany.name}}</div>
+        <div class="chart-area"></div>
     </div>
     <button class="layout-chart-widget__action
             layout-chart-widget__download-btn
