--- a/src/app/components/widget-area/widget/chart-widget/chart/chart.component.sass
+++ b/src/app/components/widget-area/widget/chart-widget/chart/chart.component.sass
@@ -11,13 +11,13 @@
     margin: 50px 30px 10px 30px
     padding: 20px
     border: none
-    border-radius: 10% / 65%
+    border-radius: 50px / 50px
     background: $widget-action-item-background-color
     outline-style: none
 
   &__action:hover
     height: 48%
-    box-shadow: 0 0px 20px $widget-shadow-color
+    box-shadow: 0 0 20px $widget-shadow-color
 
   &__date-last-value
     padding: 20px
@@ -54,3 +54,6 @@
 
   &__change-stock-btn--right-corner
     grid-area: btn-right-corner
+
+.chart-area
+  background: $chart-candle-fall-color
