feature (src): add some styles

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,25 +1,30 @@
-<h1>stock.tools</h1>
-<p> - is a simple application for displaying stock quotes.</p>
-<p>In this app you can:</p>
-<ul>
-    <li>find stock symbols of companies;</li>
-    <li>get information about stock quotes as a .csv file;</li>
-    <li>display quotes charts;</li>
-    <li>display news for the selected company.</li>
-</ul>
-<p>
-    The app uses some public api to get financial market data.
-    For the stable operation of this application, it is enough to have free public api keys.
-    You can get them on the following resources:
-</p>
-<dl>
-    <dt>Searching in app:</dt>
-    <dd><a href="https://www.alphavantage.co/support/#support">Alpha Vantage API</a></dd>
-    <dt>Extract and display data:</dt>
-    <dd><a href="https://iexcloud.io/pricing/">iex cloud API</a></dd>
-</dl>
-<p>
-    Next, you should save the keys on this&nbsp;<a routerLink="../settings">page</a>.
-    Don't worry! Your keys will be save in your browser only!
-</p>
+<div class="about
+general--font-color
+general--font-type">
 
+    <h1 class="general--bold">stock.tools</h1>
+    <p> - is a simple application for displaying stock quotes.</p>
+    <p>In this app you can:</p>
+    <ul>
+        <li>find stock symbols of companies;</li>
+        <li>get information about stock quotes as a .csv file;</li>
+        <li>display quotes charts;</li>
+        <li>display news for the selected company.</li>
+    </ul>
+    <p>
+        The app uses some public api to get financial market data.
+        For the stable operation of this application, it is enough to have free public api keys.
+        You can get them on the following resources:
+    </p>
+    <dl>
+        <dt>Searching in app:</dt>
+        <dd><a class="general--link-color" href="https://www.alphavantage.co/support/#support">Alpha Vantage API</a>
+        </dd>
+        <dt>Extract and display data:</dt>
+        <dd><a class="general--link-color" href="https://iexcloud.io/pricing/">iex cloud API</a></dd>
+    </dl>
+    <p>
+        Next, you should save the keys on this&nbsp;<a class="general--link-color" routerLink="../settings">page</a>.
+        Don't worry! Your keys will be save in your browser only!
+    </p>
+</div>
