--- a/src/app/components/widget-area/widget/general-components/search/search.component.html
+++ b/src/app/components/widget-area/widget/general-components/search/search.component.html
@@ -8,7 +8,7 @@
     </div>
 </form>
 
-<div>
+<div class="search-result">
     <table class="tab">
         <caption>Searching results:</caption>
         <thead>
