--- a/src/styles/_colors_variables.sass
+++ b/src/styles/_colors_variables.sass
@@ -1,7 +1,7 @@
 $body-background-color: rgb(37, 60, 76)
 
 $header-main-color: rgb(13, 28, 40)
-$header-shadow-color: rgba(76, 98, 126, 0.48)
+$header-shadow-color: rgba(82, 108, 142, 0.49)
 $header-background-item-when-hovering: $body-background-color
 
 $widget-background-color: $header-main-color
@@ -15,7 +15,7 @@ $widget-outline-color: $widget-action-item-background-color
 $icons-color: rgb(50, 100, 141)
 $font-color: rgb(86, 143, 165)
 $logo-color: rgb(208, 217, 231)
-$link-color: $header-shadow-color
+$link-color: rgba(157, 190, 226, 0.36)
 
 $chart-axis-color: rgb(77, 127, 127)
 $chart-volume-color: rgb(125, 80, 76)
