chore: button fixes

--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -38,7 +38,8 @@ general--font-type">
         </div>
     </div>
 
-    <button type="submit"
+    <button class="settings__btn general--font-color"
+            type="submit"
             (click)="saveKeys()"
             [disabled]="saving">
         Save API keys to Local storage
