--- a/src/app/components/settings/settings.component.sass
+++ b/src/app/components/settings/settings.component.sass
@@ -12,3 +12,15 @@
 
   &__wrong-key
     color: $chart-candle-fall-color
+
+  &__btn
+    border: none
+    outline-style: none
+    background-color: $widget-action-search-background-color
+    border-radius: 50px / 50px
+    padding: 7px 10px 10px 10px
+    margin-top: 30px
+    box-shadow: 0 0px 20px $widget-shadow-color
+
+  &__btn:hover
+    box-shadow: 0 0px 20px $link-color
