--- a/src/app/components/widget-area/widget/chart-widget/chart/chart.component.html
+++ b/src/app/components/widget-area/widget/chart-widget/chart/chart.component.html
@@ -27,7 +27,8 @@
     <div class="layout-chart-widget__chart
                     layout-chart-widget__chart--center">
         <div>{{currentCompany.name}}</div>
-        <div class="chart-area"></div>
+        <div id="{{chartUid}}"></div>
+
 
     </div>
     <button class="layout-chart-widget__action
