--- a/src/app/components/widget-area/widget/general-components/search/search.component.html
+++ b/src/app/components/widget-area/widget/general-components/search/search.component.html
@@ -36,4 +36,5 @@
             type="button" class="search-component__btn general--font-color">
         Use {{selectedCompany.symbol}} index
     </button>
+    <div>{{msg}}</div>
 </div>
