--- a/src/app/components/widget-area/widget/widget.component.html
+++ b/src/app/components/widget-area/widget/widget.component.html
@@ -1,13 +1,7 @@
-<!--TODO: перенести часть разметки и стилей-->
-<!--TODO: удалить стиль layout-widget--background-color-light-->
-<!--<div class="layout-widget-->
-<!--            layout-widget&#45;&#45;background-color-light-->
-<!--            general&#45;&#45;font-color-->
-<!--            general&#45;&#45;font-type">-->
 <div class="layout-widget
             general--font-color
             general--font-type"
      [class.layout-widget--background-color-dark]="isDark">
-    <div *ngIf="isCanBeClosed" class="layout-widget__out-btn general--bold">+</div>
+    <!--    <div *ngIf="isCanBeClosed" class="layout-widget__out-btn general&#45;&#45;bold">+</div>-->
     <ng-content></ng-content>
 </div>
